Fix alignment on breadcrumb

--- a/src/crudlfap/static/crudlfap/style.css
+++ b/src/crudlfap/static/crudlfap/style.css
@@ -17,3 +17,7 @@ nav.breadcrumb {
 nav.breadcrumb .breadcrumb-item {
     padding-top: 0.3125em;
 }
+
+nav.breadcrumb .btn {
+    margin-bottom: 0;
+}
